JAVA/project-10th/src/main/java/com/example/project10th/error/ErrorCode.java
package com.example.project10th.error;

public enum ErrorCode {
    SERVER_ERROR,
    INVALID_GRADE
}

